CMake ajoue NormalCalculation et SequentialNormalCalculation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(ProjetSysteme)
 
 include_directories(include)
 
-set(SRC src/Face.cpp src/Object.cpp src/Point.cpp src/Vector.cpp src/Maths.cpp)
+set(SRC src/Face.cpp src/Object.cpp src/Point.cpp src/Vector.cpp src/Maths.cpp src/NormalCalculation.cpp src/SequentialNormalCalculation.cpp)
 
 add_executable(main ${SRC} src/main.cpp)
