--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(Qt5 COMPONENTS Core Widgets Qml Quick
 
 FILE(GLOB gui_HEADER ${INCLUDE_DIR}/gui/*.hpp)
 
-add_executable(gui ${gui_HEADER} ${gui_SRC} ${QML_DIR}/qml.qrc)
+add_executable(gui ${gui_HEADER} ${gui_SRC} ${QML_DIR}/qml.qrc ${SHADERS_DIR}/shaders.qrc)
 target_link_libraries(gui common_lib)
 target_link_libraries(gui Qt5::Core Qt5::Widgets Qt5::Qml Qt5::Quick
                           Qt5::3DCore Qt5::3DRender Qt5::3DInput Qt5::3DExtras Qt5::3DQuick Qt5::3DLogic Qt5::3DQuickExtras)
