--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,13 @@
 add_subdirectory(lib)
-add_subdirectory(cli)
-add_subdirectory(gui)
-add_subdirectory(benchmark)
+
+if (COMPILE_CLI)
+  add_subdirectory(cli)
+endif()
+
+if (COMPILE_GUI)
+  add_subdirectory(gui)
+endif()
+
+# if (COMPILE_BENCHMARK)
+  add_subdirectory(benchmark)
+# endif()
