benchmark plus de tests

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(benchmark_SRC main.cpp)
 
+# 1.3 required
 find_package(benchmark REQUIRED)
+
 add_executable(bench ${benchmark_SRC})
 target_link_libraries(bench common_lib)
 target_link_libraries(bench benchmark::benchmark)
