Grosse mise à  jour

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -4,5 +4,7 @@ set(benchmark_SRC main.cpp)
 find_package(benchmark REQUIRED)
 
 add_executable(bench ${benchmark_SRC})
+set_target_properties(bench PROPERTIES OUTPUT_NAME benchmark)
+
 target_link_libraries(bench common_lib)
 target_link_libraries(bench benchmark::benchmark)
