--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.1)
 
 project(ProjetSysteme)
 
+set (CMAKE_CXX_STANDARD 14)
+
 option(COMPILE_CLI "Compile cli application." ON)
-option(COMPILE_GUI "Compile gui application." OFF)
-option(COMPILE_BENCHMARK "Compile benchmark test." OFF)
+option(COMPILE_GUI "Compile gui application." ON)
+option(COMPILE_BENCHMARK "Compile benchmark test." ON)
+option(COMPILE_TESTS "Compile tests." ON)
 
 set(benchmark_DIR "/home/e16006130/Téléchargements/bb/install/usr/local/lib/cmake/benchmark")
 list(APPEND CMAKE_MODULE_PATH "/home/e16006130/Téléchargements/bb/install/usr/local/lib/cmake")
@@ -20,5 +23,6 @@ set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set(QML_DIR ${CMAKE_CURRENT_SOURCE_DIR}/qml)
 set(SHADERS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/shaders)
 add_subdirectory(src)
+add_subdirectory(assets)
 
 install(FILES ${PROJECT_NAME}.desktop DESTINATION share/applications)
